; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/extr_ftp.c_Close.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/extr_ftp.c_Close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32 }

@.str = private unnamed_addr constant [16 x i8] c"stopping stream\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"QUIT\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"cannot quit\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_7__*)* @Close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Close(i32* %0, %struct.TYPE_7__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_7__*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @msg_Dbg(i32* %5, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %7 = load i32*, i32** %3, align 8
  %8 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %9 = call i32 @ftp_StopStream(i32* %7, %struct.TYPE_7__* %8)
  %10 = load i32*, i32** %3, align 8
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %12 = call i64 @ftp_SendCommand(i32* %10, %struct.TYPE_7__* %11, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %2
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @msg_Warn(i32* %15, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  br label %21

17:                                               ; preds = %2
  %18 = load i32*, i32** %3, align 8
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %20 = call i32 @ftp_RecvCommand(i32* %18, %struct.TYPE_7__* %19, i32* null, i32* null)
  br label %21

21:                                               ; preds = %17, %14
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %23 = call i32 @clearCmd(%struct.TYPE_7__* %22)
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %24, i32 0, i32 1
  %26 = call i32 @vlc_UrlClean(i32* %25)
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @vlc_tls_ClientDelete(i32 %29)
  ret void
}

declare dso_local i32 @msg_Dbg(i32*, i8*) #1

declare dso_local i32 @ftp_StopStream(i32*, %struct.TYPE_7__*) #1

declare dso_local i64 @ftp_SendCommand(i32*, %struct.TYPE_7__*, i8*) #1

declare dso_local i32 @msg_Warn(i32*, i8*) #1

declare dso_local i32 @ftp_RecvCommand(i32*, %struct.TYPE_7__*, i32*, i32*) #1

declare dso_local i32 @clearCmd(%struct.TYPE_7__*) #1

declare dso_local i32 @vlc_UrlClean(i32*) #1

declare dso_local i32 @vlc_tls_ClientDelete(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
